[package]
name = "neofiglet"
version = "0.1.0"
authors = ["Lars Quentin <lars@lquenti.de>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/lquenti/neofiglet"
repository = "https://github.com/lquenti/neofiglet"
description = """
The FIGlet libraries all the cool kids use
"""
keywords = ["figlet", "ascii", "asciiart", "neofiglet"]
categories = ["command-line-interface"]
exclude = [
    "resources/*",
]

[dependencies]
